[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "beszel-exporter"
version = "0.1.0"
description = "Export Beszel system metrics for a time range to CSV or JSON."
requires-python = ">=3.11"

[project.scripts]
beszel-exporter = "beszel_exporter.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
